<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pl.nataliana.knowyourwhale.QuizActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/intro"
            style="@style/AppThemeText"
            android:text="@string/intro" />

        <ImageView
            android:id="@+id/imageQ1"
            style="@style/Image"
            android:src="@drawable/w2" />

        <TextView
            android:id="@+id/Q1"
            style="@style/AppThemeText"
            android:text="@string/Q1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/trueQ1"
                style="@style/RadioGroupStyle"
                android:onClick="clickQ1"
                android:text="@string/A1a" />

            <RadioButton
                android:id="@+id/falseQ1"
                style="@style/RadioGroupStyle"
                android:onClick="clickQ1"
                android:text="@string/A1b" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageQ2"
            style="@style/Image"
            android:src="@drawable/w9" />

        <TextView
            android:id="@+id/Q2"
            style="@style/AppThemeText"
            android:text="@string/Q2" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/trueQ2"
                style="@style/RadioGroupStyle"
                android:onClick="clickQ2"
                android:text="@string/A2a" />

            <RadioButton
                android:id="@+id/falseQ2"
                style="@style/RadioGroupStyle"
                android:onClick="clickQ2"
                android:text="@string/A2b" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageQ3"
            style="@style/Image"
            android:src="@drawable/w3" />

        <TextView
            android:id="@+id/Q3"
            style="@style/AppThemeText"
            android:text="@string/Q3" />

        <CheckBox
            android:id="@+id/A3a"
            style="@style/CheckBoxStyle"
            android:text="@string/A3a" />

        <CheckBox
            android:id="@+id/A3b"
            style="@style/CheckBoxStyle"
            android:text="@string/A3b" />

        <CheckBox
            android:id="@+id/A3c"
            style="@style/CheckBoxStyle"
            android:text="@string/A3c" />

        <CheckBox
            android:id="@+id/A3d"
            style="@style/CheckBoxStyle"
            android:text="@string/A3d" />

        <Button
            android:id="@+id/submitCheckBox"
            style="@style/ButtonMain"
            android:onClick="submitCheckBox"
            android:text="@string/submitCheckBox" />

        <ImageView
            android:id="@+id/imageQ4"
            style="@style/Image"
            android:src="@drawable/killerwhale" />

        <TextView
            android:id="@+id/Q4"
            style="@style/AppThemeText"
            android:text="@string/Q4" />

        <EditText
            android:id="@+id/textAnswer"
            style="@style/EditTextQuiz"
            android:hint="@string/A4" />

        <ImageView
            android:id="@+id/imageQ5"
            style="@style/Image"
            android:src="@drawable/w8" />

        <TextView
            android:id="@+id/Q5"
            style="@style/AppThemeText"
            android:text="@string/Q5" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/poland"
                style="@style/RadioGroupStyle"
                android:onClick="clickQ5"
                android:text="@string/A5a" />

            <RadioButton
                android:id="@+id/iceland"
                style="@style/RadioGroupStyle"
                android:onClick="clickQ5"
                android:text="@string/A5b" />
        </RadioGroup>

        <Button
            android:id="@+id/submit"
            style="@style/ButtonQuiz"
            android:onClick="submit"
            android:text="@string/submit" />

        <Button
            android:id="@+id/answers"
            style="@style/ButtonQuiz"
            android:onClick="answers"
            android:text="@string/answers" />
    </LinearLayout>
</ScrollView>